# e-dit-desktop

./: FUNCTIONS.md  README.md  implementation_plan.md  index.html  package-lock.json  package.json  perf-test.cjs  resize-icons.ps1  walkthrough.md
public/: manifest.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src/components/Commands/: BasicCommands.tsx  CommandButton.tsx  EditTagsPanel.tsx  FavoritesTab.tsx  SunoCommands.tsx
src/components/Editor/: EditorToolbar.tsx  SplitView.tsx  TextEditor.tsx
src/components/Layout/: Header.tsx  Workspace.tsx
src/components/Notes/: NotesSidebar.tsx
src/components/Presets/: PresetsModal.tsx  PresetsTab.tsx
src/components/SymbolAnalyzer/: SymbolPanel.tsx
src/components/UI/: IconButton.tsx  TabButton.tsx
src/hooks/: useEditor.ts
src/lib/commands/: basic.ts  editTags.ts  suno.ts  symbols.ts
src/styles/: globals.css
